chore: add public routes

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
   </head>
 
   <body>
-    <script src="/index.js"></script>
+    <h1>Home</h1>
+    <output id="output"></output>
+
+    <input type="text" id="username" placeholder="Enter username" />
+    <button id="submit">Submit</button>
+
+    <script src="/index.js" type="module"></script>
   </body>
 </html>
