chore(public): add basic chat

--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,14 @@
 
   <body>
     <h1>Chat</h1>
-    <output id="output"></output> <button id="logout">Logout</button>
+    <button id="logout">Logout</button>
+
+    <p>
+      <input type="text" id="chat" placeholder="Enter message" />
+      <button id="submit">Send</button>
+    </p>
+
+    <output id="output"></output>
 
     <script src="/chat.js" type="module"></script>
   </body>
