--- a/public/chat.html
+++ b/public/chat.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Chat</title>
+    <link rel="stylesheet" href="/chat.css" />
   </head>
 
   <body>
@@ -14,6 +15,7 @@
     </p>
 
     <output id="output"></output>
+    <aside id="aside"></aside>
 
     <script src="/chat.js" type="module"></script>
   </body>
